--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   #- title: "Teaching"
   #  url: /teaching/    
   
-  - title: "Software"
+  - title: "Softwares/Toolkits"
     url: /software/    
     
   #- title: "Blog Posts"
