--- a/_config.yml
+++ b/_config.yml
@@ -94,12 +94,12 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         :
+  facebook         : "talhailyas14"
   foursquare       :
   github           : "Mr-TalhaIlyas"
   google_plus      :
   keybase          :
-  instagram        : 
+  instagram        : "talhailyas14"
   impactstory      : 
   lastfm           :
   linkedin         : # "krish-kabra"
