--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Talha Ilyas"
 title_separator          : "-"
 name                     : &name "Talha Ilyas"
-description              : &description "Research Associate, Core Research Institute of Intelligent Robots (CRIIR)"
+description              : &description "Research Assistant, Core Research Institute of Intelligent Robots (CRIIR)"
 url                      : https://mr-talhailyas.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Mr-TalhaIlyas/mr-talhailyas.github.io"
