--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Talha Ilyas"
   avatar           : "profile2.jpg"
-  bio              : "Research Associate, Core Research Institute of Intelligent Robots (CRIIR)"
+  bio              : "Research Assistant, Core Research Institute of Intelligent Robots (CRIIR)"
   location         : "Jeonbuk, South Korea"
   employer         :
   pubmed           : 
