--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
+    "terser": "^5.46.0",
     "vite": "^5.0.10"
   },
   "repository": {
